--- a/index.html
+++ b/index.html
@@ -1,4 +1,30 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Shivam Ice Factory</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      background-color: #f0f8ff;
+      color: #333;
+      padding: 20px;
+      text-align: center;
+    }
+    h1 {
+      color: #006699;
+    }
+  </style>
+</head>
+<body>
+  <h1>Welcome to Shivam Ice Factory</h1>
+  <p>Serving fresh block ice since 2007!</p>
+  <p>We offer 150kg and 75kg block ice.</p>
+  <p>Located near the Petrol Pump, Gangapur.</p>
+  <p>Contact: 9828732035</p>
+</body>
+</html><!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
