--- a/index.html
+++ b/index.html
@@ -1,77 +1,68 @@
 <!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shivam Ice Factory</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: #f2f2f2;
-      color: #333;
+      background: #f9f9f9;
     }
     header {
-      background: #007BFF;
+      background: #00bfff;
       color: white;
-      padding: 1rem;
+      padding: 20px;
       text-align: center;
     }
-    .container {
-      max-width: 1000px;
-      margin: auto;
-      padding: 1rem;
+    section {
+      padding: 30px;
+      text-align: center;
     }
-    h2 {
-      color: #007BFF;
-    }
-    .info {
-      background: white;
-      padding: 1rem;
-      margin-bottom: 1rem;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    .price {
+      font-size: 24px;
+      color: #28a745;
+      font-weight: bold;
     }
     footer {
-      text-align: center;
-      padding: 1rem;
-      background: #007BFF;
+      background: #222;
       color: white;
+      padding: 20px;
+      text-align: center;
     }
-  </style>
+    iframe {
+      width: 100%;
+      height: 300px;
+      border: none;
+    }
+  </style>  <!-- Order Now and WhatsApp Buttons -->  <div style="position: fixed; bottom: 20px; left: 20px; z-index: 1000;">
+    <a href="tel:9828732035" style="background-color: #007bff; color: white; padding: 10px 20px; border-radius: 30px; text-decoration: none; font-weight: bold; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+      Order Now
+    </a>
+  </div>  <div style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;">
+    <a href="https://wa.me/919828732035" target="_blank" style="background-color: #25D366; color: white; padding: 10px 20px; border-radius: 30px; text-decoration: none; font-weight: bold; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+      WhatsApp
+    </a>
+  </div>
 </head>
 <body>
   <header>
     <h1>Shivam Ice Factory</h1>
-    <p>Serving pure and premium block ice since 2007</p>
-  </header>  <div class="container">
-    <div class="info">
-      <h2>About Us</h2>
-      <p>
-        Welcome to Shivam Ice Factory! Located in Gangapur near the petrol pump,
-        we specialize in providing high-quality block ice in 150kg and 75kg sizes
-        at just ₹8 per kg. Operating since 2007, we are committed to quality and customer satisfaction.
-      </p>
-    </div><div class="info">
-  <h2>Our Products</h2>
-  <ul>
-    <li>150 kg Premium Ice Blocks</li>
-    <li>75 kg Standard Ice Blocks</li>
-    <li>Custom orders available on request</li>
-  </ul>
-</div>
-
-<div class="info">
-  <h2>Location</h2>
-  <p>Sahada Choraya Road, opp. Geeta Complex, Gangapur, Bhilwara, Rajasthan 311801</p>
-  <iframe
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3558.4307793681367!2d74.6293871751434!3d25.748963577338857!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3968cbbce11cb127%3A0xd8796df849e8a5dc!2sSahada%20Chauraya%20Rd%2C%20Gangapur%2C%20Rajasthan%20311801!5e0!3m2!1sen!2sin!4v1712489248404!5m2!1sen!2sin"
-    width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"
-    referrerpolicy="no-referrer-when-downgrade"></iframe>
-</div>
-
-  </div>  <footer>
-    <p>Contact us at: 9828732035 | Price: ₹8 per kg | Shivam Ice Factory, Gangapur</p>
+    <p>Since 2007 | Near Petrol Pump, Gangapur</p>
+  </header>  <section>
+    <h2>Premium Block Ice Supply</h2>
+    <p>We provide 150kg & 75kg high-quality block ice at affordable prices for all your needs.</p>
+    <p class="price">₹8 per kg</p>
+  </section>  <section>
+    <h2>Location</h2>
+    <iframe
+      src="https://www.google.com/maps?q=Sahada+Choraya+Road,+opp.+Geeta+Complex,+Gangapur,+Bhilwara,+Rajasthan+311801&output=embed"
+      allowfullscreen>
+    </iframe>
+  </section>  <footer>
+    <p>Contact: <a href="tel:9828732035" style="color: #00bfff; text-decoration: none;">9828732035</a></p>
+    <p>&copy; 2025 Shivam Ice Factory</p>
   </footer>
 </body>
 </html>
