--- a/index.html
+++ b/index.html
@@ -1,178 +1,68 @@
-<!DOCTYPE html>
-<html data-wf-page="644a5535da2cb44e730d6511" data-wf-site="644a5535da2cb476170d650d" lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shivam Ice Factory</title>
-  <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="css/v3.css" rel="stylesheet" type="text/css">
-  <link href="css/pif.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Varela:400","PT Serif:400,400italic,700,700italic","Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"]  }});</script>
-  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon">
   <style>
-/* width */
-::-webkit-scrollbar {
-  width: 10px;
-}
-/* Track */
-::-webkit-scrollbar-track {
-  //box-shadow: inset 0 0 5px grey; 
-  border-radius: 10px;
-}
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #343434; 
-  border-radius: 10px;
-  transition: background 0.9s ease-in-out;
-}
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: rgba(255, 255, 255, .87);
-  transition: background 0.9s ease-in-out;
-}
-</style>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" type="text/javascript"></script>
-  <script>
-  SmoothScroll({ 
-    animationTime    : 800, // [ms]
-    stepSize         : 100, // [px]
-    accelerationDelta : 50,  // 50
-    accelerationMax   : 3,   // 3
-    touchpadSupport   : false, 
-  })
-</script>
-  <style>
-  .header__nav-link:after, .footer__nav-link:after {
-    content: "";
-    background: rgba(255, 255, 255, 0.5);
-    display: block;
-    position: relative;
-    margin: -1px auto 0px auto;
-    transition: all 300ms ease;
-    height: 1px;
-    width: 0%;
-  }
-  .header__nav-link:hover:after, .footer__nav-link:hover:after {
-    width: 100%;
-  }
-  [data-anim="link"]:after {
-    content: "";
-    background: rgba(255, 255, 255, 0.5);
-    display: block;
-    position: relative;
-    margin: -2px auto 0px auto;
-    transition: all 300ms ease;
-    height: 1px;
-    width: 100%;
-  }
-  <style>
-  .header__nav-link:after, .footer__nav-link:after {
-    content: "";
-    background: rgba(255, 255, 255, 0.5);
-    display: block;
-    position: relative;
-    margin: -1px auto 0px auto;
-    transition: all 300ms ease;
-    height: 1px;
-    width: 0%;
-  }
-  .header__nav-link:hover:after, .footer__nav-link:hover:after {
-    width: 100%;
-  }
-  [data-anim="link"]:after {
-    content: "";
-    background: rgba(255, 255, 255, 0.5);
-    display: block;
-    position: relative;
-    margin: -2px auto 0px auto;
-    transition: all 300ms ease;
-    height: 1px;
-    width: 100%;
-  }
-  [data-anim="link"]:hover:after {
-    width: 0%;
-  }
-  .invest__experts-link > div:after {
-    content: "";
-    background: rgba(255, 255, 255, 0.5);
-    display: block;
-    position: relative;
-    margin: -2px auto 0px auto;
-    transition: all 300ms ease;
-    height: 1px;
-    width: 100%;
-  }
-  .invest__experts-link:hover > div:after {
-    width: 0%;
-  }
-  .news__block:hover .news__cat-arrow {
-    -webkit-transform: translate(6px, -6px);
-    -ms-transform: translate(6px, -6px);
-    transform: translate(6px, -6px);
-  }
-  .invest__parallax-img-wrap:hover .invest__parallax-arrow { 
-    top: 10px;  
-    right: 10px; 
-  }
-  [data-anim="arrows-btn"]:hover [data-anim="arrows"] { left: 30px; }
-  @keyframes color {
-    0%  {
-      background-color: #F45270;
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f9f9f9;
     }
-    2% {
-      background-color: #34CFCA;
+    header {
+      background: #00bfff;
+      color: white;
+      padding: 20px;
+      text-align: center;
     }
-    33%  {
-      background-color: #34CFCA;
+    section {
+      padding: 30px;
+      text-align: center;
     }
-    35% {
-      background-color: #E3ED45;
+    .price {
+      font-size: 24px;
+      color: #28a745;
+      font-weight: bold;
     }
-    66%  {
-      background-color: #E3ED45;
+    footer {
+      background: #222;
+      color: white;
+      padding: 20px;
+      text-align: center;
     }
-    69% {
-      background-color: #F45270;
+    iframe {
+      width: 100%;
+      height: 300px;
+      border: none;
     }
-    100% {
-      background-color: #F45270;
-    }
-  }
-  .section.mod--footer  {
-    animation: color 7s infinite;
-  }
-  @keyframes move {
-    0%  {
-      bottom: 120px;
-    }
-    3% {
-      bottom: 0px;
-    }
-    33%  {
-      bottom: 0px;
-    }
-    36% {
-      bottom: 60px;
-    }
-    66%  {
-      bottom: 60px;
-    }
-    69% {
-      bottom: 120px;
-    }
-    100% {
-      bottom: 120px;
-    }
-  }  
-  .footer__heading-anim {
-    animation: move 7s infinite;
-  } 
-  .form__submit-wrap:hover .overflow__anim { right: -1.5rem; }
-</style>
+  </style>  <!-- Order Now and WhatsApp Buttons -->  <div style="position: fixed; bottom: 20px; left: 20px; z-index: 1000;">
+    <a href="tel:9828732035" style="background-color: #007bff; color: white; padding: 10px 20px; border-radius: 30px; text-decoration: none; font-weight: bold; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+      Order Now
+    </a>
+  </div>  <div style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;">
+    <a href="https://wa.me/919828732035" target="_blank" style="background-color: #25D366; color: white; padding: 10px 20px; border-radius: 30px; text-decoration: none; font-weight: bold; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+      WhatsApp
+    </a>
+  </div>
 </head>
-<body data-w-id="636c4e4f528dc75dde5419e8" style="opaci
+<body>
+  <header>
+    <h1>Shivam Ice Factory</h1>
+    <p>Since 2007 | Near Petrol Pump, Gangapur</p>
+  </header>  <section>
+    <h2>Premium Block Ice Supply</h2>
+    <p>We provide 150kg & 75kg high-quality block ice at affordable prices for all your needs.</p>
+    <p class="price">₹8 per kg</p>
+  </section>  <section>
+    <h2>Location</h2>
+    <iframe
+      src="https://www.google.com/maps?q=Sahada+Choraya+Road,+opp.+Geeta+Complex,+Gangapur,+Bhilwara,+Rajasthan+311801&output=embed"
+      allowfullscreen>
+    </iframe>
+  </section>  <footer>
+    <p>Contact: <a href="tel:9828732035" style="color: #00bfff; text-decoration: none;">9828732035</a></p>
+    <p>&copy; 2025 Shivam Ice Factory</p>
+  </footer>
+</body>
+</html>
