--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
       border: none;
     }
   </style>  <!-- Order Now and WhatsApp Buttons -->  <div style="position: fixed; bottom: 20px; left: 20px; z-index: 1000;">
-    <a href="tel:9828732035" style="background-color: #007bff; color: white; padding: 10px 20px; border-radius: 30px; text-decoration: none; font-weight: bold; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+    <a href="tel:7665942227" style="background-color: #007bff; color: white; padding: 10px 20px; border-radius: 30px; text-decoration: none; font-weight: bold; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
       Order Now
     </a>
   </div>  <div style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;">
-    <a href="https://wa.me/919828732035" target="_blank" style="background-color: #25D366; color: white; padding: 10px 20px; border-radius: 30px; text-decoration: none; font-weight: bold; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+    <a href="https://wa.me/917665942227" target="_blank" style="background-color: #25D366; color: white; padding: 10px 20px; border-radius: 30px; text-decoration: none; font-weight: bold; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
       WhatsApp
     </a>
   </div>
@@ -49,7 +49,7 @@
 <body>
   <header>
     <h1>Shivam Ice Factory</h1>
-    <p>Since 2007 | Near Petrol Pump, Gangapur</p>
+    <p>Since 2007 |Shivam Ice Factory, Sahada Choraya Road, opp. Geeta Complex, Gangapur, Bhilwara, Rajasthan 311801</p>
   </header>  <section>
     <h2>Premium Block Ice Supply</h2>
     <p>We provide 150kg & 75kg high-quality block ice at affordable prices for all your needs.</p>
@@ -57,11 +57,11 @@
   </section>  <section>
     <h2>Location</h2>
     <iframe
-      src="https://www.google.com/maps?q=Sahada+Choraya+Road,+opp.+Geeta+Complex,+Gangapur,+Bhilwara,+Rajasthan+311801&output=embed"
+      src="https://www.google.com/maps?q=Shivam+Ice+Factory,Sahada+Choraya+Road,+opp.+Geeta+Complex,+Gangapur,+Bhilwara,+Rajasthan+311801&output=embed"
       allowfullscreen>
     </iframe>
   </section>  <footer>
-    <p>Contact: <a href="tel:9828732035" style="color: #00bfff; text-decoration: none;">9828732035</a></p>
+    <p>Contact: <a href="tel:7665942227" style="color: #00bfff; text-decoration: none;">766594227</a></p>
     <p>&copy; 2025 Shivam Ice Factory</p>
   </footer>
 </body>
